Added support for DS and added more information by default